# RoboticCourseProject

./: README.md
nrsl17-ground-vr/: README.md  ground_VR.sln
nrsl17-ground-vr/3rdPart/OculusSDK/LibOVRKernel/Src/Util/Shaders/: Blt_ps_ms2.h  Blt_ps_ms4.h
nrsl17-ground-vr/3rdPart/SDL2-2.0.7/VisualC/SDL/: SDL.vcxproj
nrsl17-ground-vr/3rdPart/SDL2-2.0.7/VisualC/SDLtest/: SDLtest.vcxproj
nrsl17-ground-vr/3rdPart/SDL2-2.0.7/VisualC/tests/testgles2/: testgles2.vcxproj
nrsl17-ground-vr/3rdPart/SDL2-2.0.7/VisualC/tests/testvulkan/: testvulkan.vcxproj
nrsl17-ground-vr/3rdPart/chai3d-3.0.0-GRH/include/: chai3d.h
nrsl17-ground-vr/3rdPart/chai3d-3.0.0-GRH/include/tools/: CGenericTool.cpp  CGenericTool.h
nrsl17-ground-vr/3rdPart/freeglut/: freeglut-VS2008.vcproj  freeglut-VS2010.vcxproj
nrsl17-ground-vr/openGL_VR/: AmControl.cpp  AmControl.h  NetCamera.cpp  NetCamera.h  Shader.cpp  Shader.hpp  UAV_Control.cpp  UAV_Control.h  common.cpp  common.h  inverseMotion.cpp  main.cpp  openGL_VR.vcxproj  openGL_VR.vcxproj.filters  test_UAV_Control.cpp  test_am_control.cpp
nrsl17-ground-vr/test_UAV_Control/: test_UAV_Control.vcxproj  test_UAV_Control.vcxproj.filters
nrsl17-ground-vr/test_am_control/: test_am_control.vcxproj  test_am_control.vcxproj.filters
nrsl17-uav-nuc/: .gitignore  .gitignore.swp  README.md  README.md~  launch_all.sh
nrsl17-uav-nuc/catkin_mavros/src/: .rosinstall
nrsl17-uav-nuc/catkin_mavros/src/mavros/mavros/mavros/launch/: px4.launch
nrsl17-uav-nuc/catkin_mavros/src/mavros/mavros/mavros/src/plugins/: setpoint_position.cpp  setpoint_raw.cpp
nrsl17-uav-nuc/catkin_mavros/src/mavros/mavros/mavros_extras/src/: copter_visualization.cpp
nrsl17-uav-nuc/catkin_mavros/src/mavros/mavros/mavros_extras/src/plugins/: px4flow.cpp  vision_pose_estimate.cpp
nrsl17-uav-nuc/catkin_ws/src/am_controller/: CMakeLists.txt  package.xml
nrsl17-uav-nuc/catkin_ws/src/am_controller/action/: trajectory_para.action
nrsl17-uav-nuc/catkin_ws/src/am_controller/include/: Kin.h  trajectory_controller.hpp
nrsl17-uav-nuc/catkin_ws/src/am_controller/launch/: am_controller.launch  port_set.yaml  trajectory_task_start.launch
nrsl17-uav-nuc/catkin_ws/src/am_controller/msg/: Mat_Tba.msg  servoset_msg.msg  success_flag.msg
nrsl17-uav-nuc/catkin_ws/src/am_controller/src/: Kin.cpp  serial.cpp  serial_ros_flx.cpp  servo_seter.cpp
nrsl17-uav-nuc/catkin_ws/src/am_controller/src_in_intorobot/: main.ino  serial_resolution.cpp  serial_resolution.h  servo_control.cpp  servo_control.h
nrsl17-uav-nuc/catkin_ws/src/am_controller/srv/: servoset_srv.srv
nrsl17-uav-nuc/catkin_ws/src/gs_ros_convert/: CMakeLists.txt  package.xml  readme.md
nrsl17-uav-nuc/catkin_ws/src/gs_ros_convert/include/: common.h
nrsl17-uav-nuc/catkin_ws/src/gs_ros_convert/msg/: arm_angle_grab.msg
nrsl17-uav-nuc/catkin_ws/src/gs_ros_convert/src/: common.cpp  gs_ros_convert.cpp
nrsl17-uav-nuc/catkin_ws/src/uav_controller/: CMakeLists.txt  package.xml  readme.md
nrsl17-uav-nuc/catkin_ws/src/uav_controller/launch/: uav_controller.launch
nrsl17-uav-nuc/catkin_ws/src/uav_controller/src/: uav_controller.cpp
nrsl17-uav-nuc/catkin_ws/src/vr_zed/: CMakeLists.txt  package.xml
nrsl17-uav-nuc/catkin_ws/src/vr_zed/src/: vr_zed.cpp
nrsl17-uav-nuc/catkin_ws/src/vrpn_client_ros-indigo-devel/launch/: sample.launch
nrsl17-uav-nuc/catkin_ws/src/vrpn_client_ros-indigo-devel/src/: vrpn_client_ros.cpp
