<?xml version="1.0"?>
<package>
  <name>uav_controller</name>
  <version>0.0.1</version>
  <description>The uav_controller package</description>

  <maintainer email="15754603603@163.com">Jin Song</maintainer>

  <license>BSD</license>


  <author email="10515668@qq.com">Linxu Fang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>message_runtime</run_depend>



  <export>
  </export>

</package>
